--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reown/appkit": "^1.7.11",
+    "@reown/appkit-adapter-solana": "^1.7.11",
+    "@reown/appkit-adapter-wagmi": "^1.7.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
