--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reown/appkit": "^1.7.11",
     "@reown/appkit-adapter-solana": "^1.7.11",
     "@reown/appkit-adapter-wagmi": "^1.7.11",
+    "@solana/web3.js": "^1.98.2",
+    "ethers": "^6.14.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -20,6 +22,8 @@
     "recharts": "^3.0.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.29.0",
     "@tailwindcss/vite": "^4.1.10",
     "@types/react": "^19.1.8",
@@ -31,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^4.1.10",
     "vite": "^6.1.0"
   }
